# TradingBot

./: .gitignore  CLAUDE.md  README.md
trading-bot/: .gitignore  alembic.ini  bot.sh  bot_ib.sh  bot_status.json  broad_universe.txt  config.yaml  deploy.sh  main.py  main_ib.py  pyproject.toml  reset_db.py  run_backtest.py  run_ep_backtest.py  verify_day.py
trading-bot/alembic/: env.py
trading-bot/api/: constants.py  deps.py  main.py  param_meta.py  variation.py
trading-bot/backtest/: data.py  ep_data_loader.py  metrics.py  runner.py  sweep.py
trading-bot/backtest_cache/: AAPL_2022-01-01_2024-12-31.parquet  AAPL_2023-01-01_2024-06-30.parquet  AMD_2022-01-01_2024-12-31.parquet  AMZN_2022-01-01_2024-12-31.parquet  ARM_2022-01-01_2024-12-31.parquet  AVGO_2022-01-01_2024-12-31.parquet  COIN_2022-01-01_2024-12-31.parquet  CRM_2022-01-01_2024-12-31.parquet  GOOGL_2022-01-01_2024-12-31.parquet  MARA_2022-01-01_2024-12-31.parquet  META_2022-01-01_2024-12-31.parquet  MSFT_2022-01-01_2024-12-31.parquet  NFLX_2022-01-01_2024-12-31.parquet  NVDA_2022-01-01_2024-12-31.parquet  NVDA_2023-01-01_2024-06-30.parquet  ORCL_2022-01-01_2024-12-31.parquet  PLTR_2022-01-01_2024-12-31.parquet  SHOP_2022-01-01_2024-12-31.parquet  SMCI_2022-01-01_2024-12-31.parquet  SNOW_2022-01-01_2024-12-31.parquet  TSLA_2022-01-01_2024-12-31.parquet  TSLA_2023-01-01_2024-06-30.parquet
trading-bot/backtest_results/: baseline.json  grid_search.json  oat_sweeps.json  sensitivity.json  strategy_comparison.json  validation.json
trading-bot/core/: README.md  alerts.py  data_cache.py  discord.py  eod.py  (+9 more)
(+286 files in other folders)
